# ugc-clip

./: .env.example  .gitignore  AGENTS.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 644ccf36e0f4_initial.py  9b5a7f1d2c3e_add_pipeline_artifacts.py
backend/: __init__.py  config.py  main.py  worker.py
backend/api/: auth.py  routes_auth.py  routes_briefs.py  routes_personas.py  routes_pipeline.py  routes_projects.py  routes_uploads.py
backend/models/: __init__.py  asset.py  base.py  evaluation.py  job.py  persona.py  pipeline_artifact.py  project.py  user.py
backend/pipeline/: artifacts.py  defaults.py  job_queries.py  orchestrator.py  stage.py  templates.py  upload.py
backend/pipeline/lipsync/: service.py
backend/pipeline/stages/: stage_0_onboard.py  stage_1_brief.py  stage_2_artifacts.py  stage_3_pregate.py  stage_4_anchors.py  stage_5_segments.py  stage_6_audio.py  stage_7_assembly.py  stage_8_postgate.py  stage_9_review.py
backend/pipeline/tts/: service.py
backend/verification/: persona.py  provider.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/brief/: BriefPage.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: NavBar.tsx
frontend/lib/: api.ts
templates/: day_in_life.yaml  product-review.yaml  testimonial.yaml  unboxing.yaml
tests/: test_api.py  test_api_pipeline.py  test_briefs.py  test_health.py  test_models.py  test_pipeline.py  test_segments.py  test_stages.py  test_subprocess_services.py  test_upload.py  test_verification.py
(+5 files in other folders)
