[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugc-clip"
version = "0.1.0"
description = "A gated artifact-generation pipeline for UGC. Identity verification, voice cloning, segment-based video synthesis, FFmpeg assembly, multi-gate quality control."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "alembic==1.14.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "httpx==0.28.1",
    "python-multipart==0.0.19",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.0,<4.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "stripe==11.3.0",
    "google-genai>=1.0.0",
    "yt-dlp>=2024.0.0",
    "boto3==1.36.0",
]

[project.scripts]
ugc-clip = "backend.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
per-file-ignores = {"backend/models/*.py" = ["F821"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
